--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,18 @@
       {
         "source": "**",
         "destination": "/index.html"
+      },
+      {
+        "source": "/api/**",
+        "function": "api"
       }
+    ],
+    "appAssociation": "AUTO",
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run build"
     ]
+  },
+  "functions": {
+    "source": "functions"
   }
 }
