--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,37 @@
 {
   "hosting": {
-    "public": "public",  // ← Debe coincidir con tu carpeta
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
+    "cleanUrls": true,
+    "trailingSlash": false,
     "rewrites": [
       {
+        "source": "/productos",
+        "destination": "/productos.html"
+      },
+      {
         "source": "**",
-        "destination": "/index.html"  // Página por defecto
+        "destination": "/index.html"
       }
-    ]
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(js|css|jpg|jpeg|png|webp|svg|gif|ico)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=31536000"
+          }
+        ]
+      }
+    ],
+    "i18n": {
+      "root": "/"
+    }
   }
 }
+
