--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -8,13 +8,29 @@
     ],
     "rewrites": [
       {
+        "source": "/pago",
+        "destination": "/pago.html"
+      },
+      {
+        "source": "/perfil",
+        "destination": "/perfil.html"
+      },
+      {
+        "source": "/productos",
+        "destination": "/productos.html"
+      },
+      {
+        "source": "/registro",
+        "destination": "/registro.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
     ],
     "headers": [
       {
-        "source": "**/*.@(js|css)",
+        "source": "/**/*.@(js|css)",
         "headers": [
           {
             "key": "Cache-Control",
@@ -23,7 +39,7 @@
         ]
       },
       {
-        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp)",
+        "source": "/**/*.@(jpg|jpeg|gif|png|svg|webp)",
         "headers": [
           {
             "key": "Cache-Control",
@@ -34,38 +50,5 @@
     ],
     "cleanUrls": true,
     "trailingSlash": false
-  },
-  "emulators": {
-    "auth": {
-      "port": 9099,
-      "host": "localhost"
-    },
-    "firestore": {
-      "port": 8080,
-      "host": "localhost"
-    },
-    "storage": {
-      "port": 9199,
-      "host": "localhost"
-    },
-    "ui": {
-      "enabled": true,
-      "port": 4000
-    },
-    "singleProjectMode": true
-  },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
-    ],
-    "source": "functions"
-  },
-  "storage": {
-    "rules": "storage.rules"
-  },
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
   }
 }
