--- a/firebase.json
+++ b/firebase.json
@@ -4,9 +4,15 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      "**/README.md"
     ],
     "rewrites": [
+      {
+        "source": "/api/**",
+        "function": "api",
+        "region": "southamerica-east1"
+      },
       {
         "source": "/pago",
         "destination": "/pago.html"
@@ -30,25 +36,71 @@
     ],
     "headers": [
       {
-        "source": "/**/*.@(js|css)",
+        "source": "**/*.@(js|css|woff2)",
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=31536000"
+            "value": "public, max-age=31536000, immutable"
+          },
+          {
+            "key": "X-Content-Type-Options",
+            "value": "nosniff"
           }
         ]
       },
       {
-        "source": "/**/*.@(jpg|jpeg|gif|png|svg|webp)",
+        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|ico)",
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=604800"
+            "value": "public, max-age=604800, must-revalidate"
+          }
+        ]
+      },
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Strict-Transport-Security",
+            "value": "max-age=63072000; includeSubdomains; preload"
+          },
+          {
+            "key": "X-Frame-Options",
+            "value": "SAMEORIGIN"
+          },
+          {
+            "key": "Referrer-Policy",
+            "value": "strict-origin-when-cross-origin"
           }
         ]
       }
     ],
+    "i18n": {
+      "root": "/es-SV"
+    },
     "cleanUrls": true,
-    "trailingSlash": false
+    "trailingSlash": false,
+    "appAssociation": "AUTO"
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix functions install",
+      "npm --prefix functions run build"
+    ],
+    "source": "functions",
+    "runtime": "nodejs18",
+    "region": "southamerica-east1",
+    "ignore": [
+      "**/node_modules/**",
+      "**/tests/**",
+      "**/.*"
+    ]
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
