--- a/firebase.json
+++ b/firebase.json
@@ -10,23 +10,15 @@
       {
         "source": "/api/**",
         "function": "api",
-        "region": "us-central1"  
+        "region": "us-central1"
       },
       {
-        "source": "/pago",
-        "destination": "/pago.html"
+        "source": "/create-order",
+        "function": "createOrder"
       },
       {
-        "source": "/perfil",
-        "destination": "/perfil.html"
-      },
-      {
-        "source": "/productos",
-        "destination": "/productos.html"
-      },
-      {
-        "source": "/registro",
-        "destination": "/registro.html"
+        "source": "/process-payment",
+        "function": "processPayment"
       },
       {
         "source": "**",
@@ -48,11 +40,11 @@
     "trailingSlash": false
   },
   "functions": {
-    "predeploy": [
-      "npm --prefix functions run build"
-    ],
     "source": "functions",
     "runtime": "nodejs18",
-    "region": "us-central1"  // Misma región que tu Firestore
+    "region": "us-central1",
+    "predeploy": [
+      "npm --prefix functions run build"
+    ]
   }
 }
