--- a/firebase.json
+++ b/firebase.json
@@ -35,25 +35,11 @@
           {
             "key": "Cache-Control",
             "value": "public, max-age=31536000, immutable"
-          },
-          {
-            "key": "X-Content-Type-Options",
-            "value": "nosniff"
-          }
-        ]
-      },
-      {
-        "source": "**/*.@(jpg|jpeg|png|gif|svg|webp|ico)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=604800"
           }
         ]
       }
     ],
-    "cleanUrls": true,
-    "trailingSlash": false
+    "cleanUrls": true
   },
   "functions": {
     "source": "functions",
@@ -63,9 +49,5 @@
       "npm --prefix functions install",
       "npm --prefix functions run build"
     ]
-  },
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
   }
 }
