--- a/functions/package.json
+++ b/functions/package.json
@@ -2,23 +2,19 @@
   "name": "tu-proyecto-paypal",
   "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "functions",
-    "frontend"
-  ],
   "scripts": {
-    "dev": "cd frontend && npm run dev",
-    "build": "cd frontend && npm run build",
-    "serve": "cd frontend && npm run serve",
+    "dev": "cd public && npm run dev",
+    "build": "cd functions && npm run build",
+    "serve": "firebase emulators:start",
     "deploy": "firebase deploy",
     "deploy:hosting": "firebase deploy --only hosting",
-    "deploy:functions": "firebase deploy --only functions",
+    "deploy:functions": "cd functions && npm run build && cd .. && firebase deploy --only functions",
     "emulators": "firebase emulators:start",
     "format": "prettier --write \"**/*.{js,ts,html,css,json}\"",
     "lint": "eslint . --ext .js,.ts",
     "prepare": "husky install",
     "postinstall": "npm run install:all",
-    "install:all": "cd functions && npm install && cd ../frontend && npm install"
+    "install:all": "cd functions && npm install"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
@@ -29,7 +25,11 @@
     "prettier": "^3.2.5",
     "typescript": "^5.3.3"
   },
+  "dependencies": {
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.5.0"
+  },
   "engines": {
-    "node": ">=18"
+    "node": "18"
   }
 }
