--- a/functions/package.json
+++ b/functions/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "tu-proyecto-paypal",
+  "name": "mitienda-functions",
   "version": "1.0.0",
-  "private": true,
+  "description": "Cloud Functions para Mi Tienda",
+  "main": "lib/index.js",
   "scripts": {
-    "dev": "cd public && npm run dev",
-    "build": "cd functions && npm run build",
-    "serve": "firebase emulators:start",
-    "deploy": "firebase deploy",
-    "deploy:hosting": "firebase deploy --only hosting",
-    "deploy:functions": "cd functions && npm run build && cd .. && firebase deploy --only functions",
-    "emulators": "firebase emulators:start",
-    "format": "prettier --write \"**/*.{js,ts,html,css,json}\"",
-    "lint": "eslint . --ext .js,.ts",
-    "prepare": "husky install",
-    "postinstall": "npm run install:all",
-    "install:all": "cd functions && npm install"
-  },
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "firebase-tools": "^13.10.0",
-    "husky": "^9.0.11",
-    "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "firebase-admin": "^11.11.0",
-    "firebase-functions": "^4.5.0"
+    "firebase-functions": "^4.5.0",
+    "@paypal/paypal-server-sdk": "^1.0.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "firebase-tools": "^13.10.0",
+    "@types/node": "^20.11.0"
   },
   "engines": {
     "node": "18"
