--- a/functions/package.json
+++ b/functions/package.json
@@ -1,22 +1,11 @@
 {
-  "name": "mitienda-functions",
-  "version": "1.0.0",
-  "main": "lib/index.js",
-  "scripts": {
-    "build": "tsc",
-    "serve": "firebase emulators:start --only functions",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
   "dependencies": {
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
-    "@paypal/paypal-server-sdk": "^1.0.1"
+    "@paypal/paypal-server-sdk": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
-  },
-  "engines": {
-    "node": "18"
+    "typescript": "^5.3.3",
+    "@types/node": "^18.0.0"
   }
 }
