--- a/functions/package.json
+++ b/functions/package.json
@@ -1,11 +1,20 @@
 {
+  "name": "functions",
+  "version": "1.0.0",
+  "scripts": {
+    "build": "tsc",
+    "serve": "firebase emulators:start --only functions",
+    "deploy": "firebase deploy --only functions"
+  },
   "dependencies": {
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
-    "@paypal/paypal-server-sdk": "^2.0.0"
+    "@paypal/paypal-server-sdk": "^3.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^18.0.0"
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": "18"
   }
 }
