--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
-    "@paypal/paypalhttp": "^1.0.0"
+    "@paypal/checkout-server-sdk": "^1.0.3"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
