--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "functions",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "scripts": {
     "build": "tsc",
     "serve": "firebase emulators:start --only functions",
@@ -9,7 +9,7 @@
   "dependencies": {
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
-    "@paypal/checkout-server-sdk": "^1.0.3"
+    "@paypal/paypal-server-sdk": "1.1.0"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
