--- a/functions/package.json
+++ b/functions/package.json
@@ -1,20 +1,32 @@
 {
   "name": "functions",
-  "version": "1.0.0",
   "scripts": {
+    "lint": "eslint .",
     "build": "tsc",
-    "serve": "firebase emulators:start --only functions",
-    "deploy": "firebase deploy --only functions"
-  },
-  "dependencies": {
-    "firebase-admin": "^11.11.0",
-    "firebase-functions": "^4.5.0",
-    "@paypal/paypal-server-sdk": "1.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.3"
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
   "engines": {
     "node": "18"
-  }
+  },
+  "main": "lib/index.js",
+  "dependencies": {
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
+    "firebase-functions": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "eslint": "^8.54.0",
+    "eslint-config-google": "^0.14.0",
+    "firebase-functions-test": "^3.0.0",
+    "typescript": "^5.2.2"
+  },
+  "private": true
 }
