--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,39 +1,16 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2020",
     "lib": ["es2020"],
-    "outDir": "lib",
-    "rootDir": "src",
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "strictPropertyInitialization": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "module": "commonjs",
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "outDir": "lib",
     "sourceMap": true,
-    "baseUrl": ".",
-    "paths": {
-      "@paypal/*": ["node_modules/@paypal/*"],
-      "@firebase/*": ["node_modules/@firebase/*"]
-    },
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "strict": true,
+    "target": "es2020",
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": [
-    "node_modules",
-    "lib",
-    "**/*.spec.ts",
-    "**/*.test.ts"
-  ]
+  "compileOnSave": true,
+  "include": ["src"]
 }
