--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,16 +1,14 @@
 {
   "compilerOptions": {
-    "lib": ["es2020"],
     "module": "commonjs",
-    "noImplicitReturns": true,
-    "esModuleInterop": true,
+    "target": "es6",
+    "lib": ["es6"],
     "outDir": "lib",
-    "sourceMap": true,
+    "rootDir": "src",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "target": "es2020",
-    "moduleResolution": "node",
-    "resolveJsonModule": true
+    "noImplicitReturns": true
   },
-  "compileOnSave": true,
   "include": ["src"]
 }
