--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/storage": "^6.9.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.1",
-    "firebase-functions": "^4.4.1"
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
