--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/storage": "^6.9.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-admin": "^13.4.0",
-    "firebase-functions": "^4.9.0"
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.3.2"
   },
   "devDependencies": {
     "typescript": "^5.4.5",
