--- a/firebase.json
+++ b/firebase.json
@@ -25,12 +25,7 @@
           {
             "key": "Cache-Control",
             "value": "public, max-age=31536000, immutable"
-          }
-        ]
-      },
-      {
-        "source": "**/*.js",
-        "headers": [
+          },
           {
             "key": "Content-Type",
             "value": "application/javascript"
@@ -38,7 +33,7 @@
         ]
       },
       {
-        "source": "**/src/**/*.js",
+        "source": "/js/paypal/**",
         "headers": [
           {
             "key": "Content-Type",
@@ -47,13 +42,7 @@
         ]
       }
     ],
-    "cleanUrls": true,
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "cleanUrls": true
   },
   "functions": {
     "source": "functions",
