--- a/firebase.json
+++ b/firebase.json
@@ -12,25 +12,38 @@
         "source": "/api/**",
         "function": "api",
         "region": "us-central1"
+      },
+      {
+        "source": "/pago",
+        "destination": "/pago.html"
+      },
+      {
+        "source": "/confirmacion",
+        "destination": "/confirmacion.html"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
       }
     ],
     "headers": [
       {
-        "source": "**/*.@(js|css|woff2)",
+        "source": "/api/**",
         "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=31536000, immutable"
-          }
+          { "key": "Access-Control-Allow-Origin", "value": "*" },
+          { "key": "Access-Control-Allow-Methods", "value": "POST, OPTIONS" }
         ]
       },
       {
-        "source": "/js/**",
+        "source": "**/*.@(js|css|woff2)",
         "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "*"
-          }
+          { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+        ]
+      },
+      {
+        "source": "/pago.html",
+        "headers": [
+          { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }
         ]
       }
     ],
@@ -43,6 +56,7 @@
     "region": "us-central1",
     "predeploy": [
       "npm --prefix functions install",
+      "npm --prefix functions audit",
       "npm --prefix functions run build"
     ]
   },
